Move event schedule to database with admin editor
